# h2m

./: .gitignore  Cargo.toml  README.md  clippy.toml  demo.tape  install.ps1  install.sh
.github/workflows/: cd.yml  publish.yml  release.yml  rust-publish.yml
h2m/: Cargo.toml
h2m-cli/: Cargo.toml
h2m-cli/src/: cli.rs  convert.rs  error.rs  main.rs  output.rs  search.rs
h2m-cli/src/commands/: convert.rs  mod.rs  search.rs
h2m-cli/src/shared/: content.rs  format.rs  http.rs  mod.rs
h2m-search/: Cargo.toml
h2m-search/src/: client.rs  error.rs  http.rs  lib.rs  query.rs  response.rs  retry.rs  secret.rs
h2m-search/src/providers/: brave.rs  common.rs  duckduckgo.rs  mod.rs  searxng.rs  tavily.rs  wikipedia.rs
h2m-search/src/providers/duckduckgo/: captcha.rs  http.rs  mod.rs  params.rs  parse.rs
h2m-search/src/providers/testdata/: duckduckgo_html_results.html  duckduckgo_lite_results.html
h2m-search/tests/: integration.rs
h2m/src/: context.rs  converter.rs  dom.rs  error.rs  escape.rs  fetch.rs  html.rs  lib.rs  options.rs  plugin.rs  result.rs  rule.rs  utils.rs  whitespace.rs
h2m/src/fetch/: client.rs  mod.rs  pipeline.rs  types.rs
h2m/src/html/: extract.rs  mod.rs  readable.rs  select.rs
h2m/src/plugins/: gfm.rs  mod.rs  strikethrough.rs  table.rs  task_list.rs
h2m/src/rules/: blockquote.rs  code_block.rs  emphasis.rs  heading.rs  horizontal_rule.rs  iframe.rs  image.rs  inline.rs  inline_code.rs  line_break.rs  link.rs  list.rs  misc.rs  mod.rs  paragraph.rs  strong.rs  text.rs
h2m/src/scrape/: http.rs  mod.rs  pipeline.rs  types.rs
h2m/tests/: blocks.rs  domain.rs  general.rs  gfm.rs  headings.rs  html_utils.rs  inline.rs  links.rs  smoke.rs
h2m/tests/common/: mod.rs
scripts/: live_search_e2e.ps1  mock_searxng.ps1  mock_searxng.py  smoke_search.ps1
skills/h2m/: SKILL.md
