[package]
name = "h2m-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "h2m"
path = "src/main.rs"

[dependencies]
h2m = { workspace = true, features = ["fetch"] }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
