[package]
name = "h2m-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "h2m"
path = "src/main.rs"

[features]
default = ["search"]
search = ["dep:h2m-search"]
all-providers = ["search", "h2m-search/all"]

[dependencies]
h2m = { workspace = true, features = ["scrape"] }
h2m-search = { workspace = true, optional = true }
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros"] }
wiremock.workspace = true

[lints]
workspace = true
