[package]
name = "h2m-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "h2m"
path = "src/main.rs"

[features]
default = ["search"]
# Pulls the `h2m-search` crate with its default providers (`duckduckgo` + `wikipedia`).
search = ["dep:h2m-search"]
# Opt-in extra providers. Each mirrors an h2m-search feature so that CLI code
# can use `#[cfg(feature = "X")]` consistently when referencing provider-
# specific builder methods.
searxng = ["search", "h2m-search/searxng"]
brave = ["search", "h2m-search/brave"]
tavily = ["search", "h2m-search/tavily"]
all-providers = ["search", "searxng", "brave", "tavily"]

[dependencies]
h2m = { workspace = true, features = ["scrape"] }
h2m-search = { workspace = true, optional = true }
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros"] }
wiremock.workspace = true

[lints]
workspace = true
