[package]
name = "h2m-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Web search provider abstraction for h2m (SearXNG, Brave, Tavily)."
keywords = ["search", "searxng", "brave", "tavily", "h2m"]
categories = ["web-programming", "command-line-utilities"]

[features]
default = ["searxng"]
searxng = []
brave = []
tavily = []
all = ["searxng", "brave", "tavily"]

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
tokio.workspace = true
wiremock.workspace = true

[lints]
workspace = true
