[package]
name = "h2m-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Zero-config web search for h2m (DuckDuckGo, Wikipedia, SearXNG, Brave, Tavily)."
keywords = ["search", "duckduckgo", "wikipedia", "searxng", "h2m"]
categories = ["web-programming", "command-line-utilities"]

[features]
default = ["duckduckgo", "wikipedia"]
duckduckgo = ["dep:scraper", "dep:percent-encoding"]
wikipedia = ["dep:percent-encoding"]
searxng = []
brave = []
tavily = []
all = ["duckduckgo", "wikipedia", "searxng", "brave", "tavily"]

[dependencies]
reqwest.workspace = true
scraper = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock.workspace = true

[lints]
workspace = true
