[package]
name = "h2m"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
scraper.workspace = true
thiserror.workspace = true
ego-tree.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
